fixed varius gaps for screens wider than 768px

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,7 +133,7 @@
 }
 
 .content-gap {
-  margin-block-end: var(--medium-content-gap);
+  margin-block-end: var(--small-content-gap);
 }
 
 .section__title {
@@ -181,7 +181,7 @@
   line-height: var(--text-line-height);
 }
 
-.cards__images-item { 
+.cards__images-item {
   inline-size: 100%;
 }
 
@@ -203,20 +203,26 @@
 
 @media (width >= 768px) {
 
+  .content-gap {
+    margin-block-end: var(--medium-content-gap);
+  }
+
   .header__description {
     max-inline-size: 100%;
     inline-size: 47.5vw;
-  }
-
-  .header__theme-menu {
-    padding-inline-end: var(--medium-gap);
-    padding-block-start: 17px;
+    margin-inline-end: var(--medium-gap);
+    margin-block-end: var(--medium-gap);
   }
 
   .header__title {
     position: relative;
     inset-inline-start: calc(-1 * var(--medium-gap));
     padding-inline-start: var(--medium-gap);
+  }
+
+  .header__theme-menu {
+    padding-block-start: 17px;
+    padding-inline-end: var(--medium-gap);
   }
 
   .why__section li:first-child .section__text-content-item-title,
@@ -287,7 +293,7 @@
 
   .what__section {
     display: grid;
-    grid-template-columns: min-content;
+    grid-template-columns: min-content 1fr 1fr;
   }
 
   .what__section .section__text {
@@ -297,7 +303,7 @@
   .how__section {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: var(--small-gap);
+    gap: var(--medium-gap);
   }
 
   .how__section .section__text {
@@ -342,13 +348,9 @@
 
 @media (width >= 1024px) {
 
-  .header {
-    inline-size: 100%;
-  }
-
   .header__description {
-    margin-inline-end: var(--medium-gap);
     margin-block-end: 20px;
+    inline-size: 48vw;
   }
 
   .header__theme-menu {
@@ -362,10 +364,27 @@
     flex-direction: row;
   }
 
+  .why__section {
+    gap: var(--small-gap);
+  }
+
+  .what__section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .what__section .section__text {
+    grid-column: span 3;
+  }
+
   .what__section .section__text-content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: var(--medium-gap);
+  }
+
+  .how__section {
+    gap: var(--small-gap);
   }
 }
 
